# Visual-Note-Structured-Extraction

./: .gitignore  README.md  README_azure.md  README_eval.md  README_full.md  azure_ocr_test.py  bentham_eval.py  clean_bilingual.py  crontab.txt  dump_ocr.py  eval_design_v1.md  extract_test.py  install.sh  make_view.py  ocr_test.py  preprocess_test.py  process_inbox.py  pyproject.toml  requirements.txt  run.sh  run_corpus.py  run_full_pipeline.py  setup.sh  stage_corpus.py  test_extract.py  test_ocr.py
corpora/cse138/: manifest.json
corpora/cse138_gold/: figure_bboxes.json
corpora/tim172a/: manifest.json
legacy/: ocr_test.py  test.py
miso/: README.md  __init__.py  augment.py  config.py  db.py  document.py  encoders.py  export.py  extraction.py  figures.py  layout.py  lexicon.py  mermaid.py  ocr.py  pipeline.py  replay.py  retrieval.py  schema.sql  summary_store.py  trace.py  types.py  wordlists.py
miso/eval/: __init__.py  __main__.py  analyze.py  armb.py  calibrate.py  cli.py  draft_gold_md.py  faithfulness.py  figure_eval.py  gold.py  gold_build.py  loader.py  metrics.py  models.py  ocr_eval.py  ocr_runner.py  run_grid.py
miso/examples/: electric_power_distribution.json
miso/prompts/: __init__.py  combine_system.md  extraction_system.md  figure_mermaid.md  summary_system.md
miso/synth/: __init__.py  __main__.py  build.py  iam.py  noteify.py  openstax.py  render.py  terms.py
miso/tests/: test_export.py  test_faithfulness.py  test_figure_eval.py  test_figures.py  test_gold_build.py  test_layout.py  test_lexicon.py  test_mermaid.py  test_metrics.py  (+2 more)
(+284 files in other folders)
